[gd_scene load_steps=36 format=2]

[ext_resource path="res://interface/ui_elements/icons/ice_background.png" type="Texture" id=1]
[ext_resource path="res://interface/ui_elements/icons/ice_icon.png" type="Texture" id=2]
[ext_resource path="res://interface/ui_elements/icons/flame_background.png" type="Texture" id=3]
[ext_resource path="res://interface/ui_elements/icons/flame_icon.png" type="Texture" id=4]
[ext_resource path="res://interface/ui_elements/icons/lightning_background.png" type="Texture" id=5]
[ext_resource path="res://interface/ui_elements/icons/lightning_icon.png" type="Texture" id=6]
[ext_resource path="res://interface/ui_elements/SelectedSpellIcon.gd" type="Script" id=7]
[ext_resource path="res://pickups/fire_spells/PickupFireSpike.tres" type="Texture" id=8]
[ext_resource path="res://particles/flame_1.png" type="Texture" id=9]
[ext_resource path="res://pickups/ice_spells/particle_ice.png" type="Texture" id=10]
[ext_resource path="res://pickups/lightnings_spells/particle_lightning.png" type="Texture" id=11]
[ext_resource path="res://particles/flame_3.png" type="Texture" id=12]
[ext_resource path="res://particles/flame_2.png" type="Texture" id=13]
[ext_resource path="res://interface/ui_elements/SpellBar.tscn" type="PackedScene" id=14]
[ext_resource path="res://interface/ui_elements/bar_points/lightning_bar_fill.png" type="Texture" id=15]
[ext_resource path="res://interface/ui_elements/bar_points/fire_bar_fill.png" type="Texture" id=16]
[ext_resource path="res://interface/ui_elements/bar_points/ice_bar_fill.png" type="Texture" id=17]

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.302885, 0.579545 ), -0.244242, -0.244242, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 32.0
flag_disable_z = true
gravity = Vector3( 0, -100, 0 )
angular_velocity = 180.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 70.0
scale = 0.5
scale_curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 50.0
flag_disable_z = true
direction = Vector3( 0.5, -1, 0 )
gravity = Vector3( 0, -100, 0 )
initial_velocity = 42.56
angular_velocity = 29.9
angular_velocity_random = 1.0
orbit_velocity = 0.25
orbit_velocity_random = 0.0
linear_accel = -100.0
damping = 52.48
angle = 9.0
angle_random = 1.0
scale = 0.5
scale_curve = ExtResource( 8 )

[sub_resource type="Curve" id=19]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 200 ), 0.0, 0.0, 0, 0, Vector2( 0.966292, 169.545 ), -404.546, -404.546, 0, 0, Vector2( 1, -200 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 19 )

[sub_resource type="ParticlesMaterial" id=20]
emission_shape = 5
emission_ring_radius = 76.5
emission_ring_inner_radius = 70.79
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
angular_velocity = 42.77
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
radial_accel = -500.0
radial_accel_curve = SubResource( 4 )
damping = 100.0
angle = 720.0
angle_random = 1.0
scale = 0.7
scale_curve = ExtResource( 8 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.302885, 0.579545 ), -0.244242, -0.244242, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 1
emission_sphere_radius = 32.0
flag_disable_z = true
gravity = Vector3( 0, -100, 0 )
angular_velocity = 180.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 70.0
scale = 0.5
scale_curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 50.0
flag_disable_z = true
direction = Vector3( 0.5, -1, 0 )
gravity = Vector3( 0, -100, 0 )
initial_velocity = 42.56
angular_velocity = 29.9
angular_velocity_random = 1.0
orbit_velocity = 0.25
orbit_velocity_random = 0.0
linear_accel = -100.0
damping = 52.48
angle = 9.0
angle_random = 1.0
scale = 0.5
scale_curve = ExtResource( 8 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.302885, 0.579545 ), -0.244242, -0.244242, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 1
emission_sphere_radius = 32.0
flag_disable_z = true
gravity = Vector3( 0, -100, 0 )
angular_velocity = 180.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 70.0
scale = 0.5
scale_curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 1
emission_sphere_radius = 50.0
flag_disable_z = true
direction = Vector3( 0.5, -1, 0 )
gravity = Vector3( 0, -100, 0 )
initial_velocity = 42.56
angular_velocity = 29.9
angular_velocity_random = 1.0
orbit_velocity = 0.25
orbit_velocity_random = 0.0
linear_accel = -100.0
damping = 52.48
angle = 9.0
angle_random = 1.0
scale = 0.5
scale_curve = ExtResource( 8 )

[sub_resource type="Curve" id=17]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 200 ), 0.0, 0.0, 0, 0, Vector2( 0.966292, 169.545 ), -404.546, -404.546, 0, 0, Vector2( 1, -200 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 17 )

[sub_resource type="ParticlesMaterial" id=18]
emission_shape = 5
emission_ring_radius = 76.5
emission_ring_inner_radius = 70.79
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
angular_velocity = 42.77
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
radial_accel = -500.0
radial_accel_curve = SubResource( 2 )
damping = 100.0
angle = 720.0
angle_random = 1.0
scale = 0.5
scale_curve = ExtResource( 8 )

[node name="SelectedSpellIcon" type="HBoxContainer"]
script = ExtResource( 7 )
current_spell_type = 1

[node name="FlameSection" type="VBoxContainer" parent="."]
margin_right = 97.0
margin_bottom = 166.0
mouse_filter = 2

[node name="Flame" type="TextureRect" parent="FlameSection"]
margin_right = 97.0
margin_bottom = 97.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="LitIcon" type="TextureRect" parent="FlameSection/Flame"]
margin_left = 26.0
margin_top = 13.0
margin_right = 75.0
margin_bottom = 84.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="PariclesSparkle" type="Particles2D" parent="FlameSection/Flame"]
position = Vector2( 50, 54 )
emitting = false
amount = 3
randomness = 0.25
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 12 )

[node name="PariclesSparkle2" type="Particles2D" parent="FlameSection/Flame"]
position = Vector2( 48, 54 )
scale = Vector2( 1.1, 1.1 )
emitting = false
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 13 )

[node name="Particles2D" type="Particles2D" parent="FlameSection/Flame"]
position = Vector2( 49, 54 )
emitting = false
amount = 6
lifetime = 0.8
explosiveness = 0.05
process_material = SubResource( 20 )
texture = ExtResource( 9 )

[node name="SpellBar" parent="FlameSection" instance=ExtResource( 14 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 101.0
margin_right = 97.0
margin_bottom = 166.0
spell_bar_image = ExtResource( 16 )

[node name="IceSection" type="VBoxContainer" parent="."]
margin_left = 101.0
margin_right = 198.0
margin_bottom = 166.0
mouse_filter = 2

[node name="Ice" type="TextureRect" parent="IceSection"]
margin_right = 97.0
margin_bottom = 97.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="LitIcon" type="TextureRect" parent="IceSection/Ice"]
visible = false
margin_left = 18.0
margin_top = 15.0
margin_right = 80.0
margin_bottom = 80.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="PariclesSparkle" type="Particles2D" parent="IceSection/Ice"]
position = Vector2( 49, 49 )
emitting = false
amount = 3
randomness = 0.25
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 10 )

[node name="PariclesSparkle2" type="Particles2D" parent="IceSection/Ice"]
position = Vector2( 49, 49 )
scale = Vector2( 1.1, 1.1 )
emitting = false
local_coords = false
process_material = SubResource( 12 )
texture = ExtResource( 10 )

[node name="Particles2D" type="Particles2D" parent="IceSection/Ice"]
position = Vector2( 49, 54 )
emitting = false
amount = 6
lifetime = 0.8
explosiveness = 0.05
process_material = SubResource( 20 )
texture = ExtResource( 10 )

[node name="SpellBar" parent="IceSection" instance=ExtResource( 14 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 101.0
margin_right = 97.0
margin_bottom = 166.0
spell_bar_image = ExtResource( 17 )
spell_type = 1

[node name="LightSection" type="VBoxContainer" parent="."]
margin_left = 202.0
margin_right = 299.0
margin_bottom = 166.0
mouse_filter = 2

[node name="Lightning" type="TextureRect" parent="LightSection"]
margin_right = 97.0
margin_bottom = 97.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="LitIcon" type="TextureRect" parent="LightSection/Lightning"]
visible = false
margin_left = 24.0
margin_top = 16.0
margin_right = 73.0
margin_bottom = 79.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="PariclesSparkle" type="Particles2D" parent="LightSection/Lightning"]
position = Vector2( 49, 50 )
emitting = false
amount = 3
randomness = 0.25
local_coords = false
process_material = SubResource( 15 )
texture = ExtResource( 11 )

[node name="PariclesSparkle2" type="Particles2D" parent="LightSection/Lightning"]
position = Vector2( 50, 51 )
scale = Vector2( 1.1, 1.1 )
emitting = false
local_coords = false
process_material = SubResource( 16 )
texture = ExtResource( 11 )

[node name="Particles2D" type="Particles2D" parent="LightSection/Lightning"]
position = Vector2( 50, 50 )
emitting = false
amount = 6
lifetime = 0.8
explosiveness = 0.05
process_material = SubResource( 18 )
texture = ExtResource( 11 )

[node name="SpellBar" parent="LightSection" instance=ExtResource( 14 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 101.0
margin_right = 97.0
margin_bottom = 166.0
spell_bar_image = ExtResource( 15 )
spell_type = 2
